P03 for java done